# cmm-documentation

./: .gitignore  Documento sin título.odt  Exploded_view.md  General_structure.md  README.md  existing_files.md
Diegos-experiments/: c2  code_with_printer_output.cmm  explanation.txt  low_level.cmm  pretty_printer.txt
cmm-samples/: INFO_TABLE_CONSTR.cmm  REQUIREMENTS  c  c-llvm  cmm-closure-types  cmm-notes  cmm-samples  low_level.cmm  sample.cmm  test00.cmm  test00b.cmm  test01.cmm  test02.cmm  test03.cmm  test04.cmm  test05.cmm  test06_sum.cmm  test06_sum.cmm.compile-with-llvm  test06_sum_concurrent.cmm  test07_count.cmm  test08_count_concurrent.cmm  test09_return_utup.cmm
custom-plugin/: usage-instruction.txt
custom-plugin/cmm-plugin/: ToDo.txt  cmm-plugin.cabal  stack.yaml
custom-plugin/cmm-plugin/src/CMM/: CmmSerde.hs  Plugin.hs
custom-plugin/plugin-tester2/: CHANGELOG.md  README.md  plugin-tester2.cabal  stack.yaml
myproject/: myproject.cabal  stack.yaml
myproject/src/: Main copy.hs  Main.hs  Main.txt  Main3.hs  Main4.hs  MainOLD.hs  Util.hs
