cabal-version:      2.4
name:               cmm-plugin
version:            1.0.0

-- A short (one-line) description of the package.
synopsis: CMM plugin for GHC 9.10.3

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:           
maintainer:         


library
    exposed-modules:  CMM.Plugin

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      ghc,
                      ghc-boot,
                      aeson,
                      text,
                      primitive,
                      base64-bytestring,
                      bytestring,
                      containers
                      -- Data.Map
                       --from aeson onwards are required for CmmSerde
                      
    hs-source-dirs:   src
    default-language: Haskell2010

    other-modules:      CMM.CmmSerde    

foreign-library cmm-plugin
  type:                native-shared
  default-language:    Haskell2010
  hs-source-dirs:     src

  ghc-options:         -this-unit-id cmm-plugin-unit
                       -fno-link-rts

  build-depends:      base,
                      ghc,
                      ghc-boot,
                      aeson,
                      text,
                      primitive,
                      base64-bytestring,
                      bytestring,
                      containers
                      -- Data.Map
                      --from aeson onwards are required for CmmSerde

  other-modules:      CMM.Plugin,
                      CMM.CmmSerde

